--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "description": "",
   "scripts": {
     "build": "gulp build",
-    "start": "gulp serve"
+    "start": "gulp serve",
+    "test": "gulp test"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
     "browser-sync": "^2.26.7",
+    "chai": "4.2.0",
     "css-mqpacker": "^6.0.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
@@ -21,9 +23,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "2.6.5",
-    "rollup": "^1.29.0"
+    "rollup": "^1.29.0",
+    "rollup-plugin-commonjs": "10.1.0"
   },
   "engines": {
     "node": "^8"
+  },
+  "dependencies": {
+    "gulp-mocha": "7.0.2"
   }
 }
