--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
   "name": "GuessMelody",
-  "version": "4.0.0",
+  "version": "3.0.0",
   "private": true,
-  "description": "",
+  "description": "Личный проект «Угадай мелодию» от HTML Academy",
   "scripts": {
+    "eslint": "eslint js/",
     "build": "gulp build",
     "start": "gulp serve",
     "test": "gulp test"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "browser-sync": "^2.26.7",
-    "chai": "4.2.0",
-    "css-mqpacker": "^6.0.0",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-better-rollup": "4.0.1",
-    "gulp-csso": "^3.0.0",
-    "gulp-imagemin": "^3.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^7.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "2.6.5",
-    "rollup": "^1.29.0",
-    "rollup-plugin-commonjs": "10.1.0"
+    "autoprefixer": "6.7.7",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
+    "babel-register": "6.26.0",
+    "browser-sync": "2.18.8",
+    "css-mqpacker": "6.0.0",
+    "del": "2.2.2",
+    "gulp": "3.9.1",
+    "gulp-better-rollup": "1.1.1",
+    "gulp-csso": "3.0.0",
+    "gulp-imagemin": "3.2.0",
+    "gulp-mocha": "4.3.1",
+    "gulp-plumber": "1.1.0",
+    "gulp-postcss": "7.0.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "3.1.0",
+    "gulp-sourcemaps": "2.6.1"
   },
   "engines": {
-    "node": "^8"
+    "node": "6.11.3"
   },
-  "dependencies": {
-    "gulp-mocha": "7.0.2"
+  "babel": {
+    "plugins": [
+      "transform-es2015-modules-commonjs"
+    ]
   }
 }
